--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: myapp
-description: "A new Flutter project."
+name: code_alchemist
+description: "A high-end educational cyberpunk game built with Flutter."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -30,10 +30,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.8
+  flutter_bloc: ^8.1.3
+  equatable: ^2.0.5
+  get_it: ^7.2.0
+  go_router: ^6.5.0
+  flame: ^1.2.1
+  google_fonts: ^4.0.4
+  flutter_animate: ^4.1.1
+  flutter_svg: ^1.1.6
+  shared_preferences: ^2.1.1
 
 dev_dependencies:
   flutter_test:
@@ -56,6 +61,9 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  assets:
+    - assets/images/
+    - assets/audio/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
